# task_orchestrator

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  DESIGN.md  MODULE.bazel  README.md  WORKSPACE  package-lock.json
.github/workflows/: ci.yml  release.yml
application/: BUILD  main.cpp
application/config/: config.hpp  config_loader.cpp
application/examples/: BUILD  README.md  mixed_actors.yaml  warehouse_capacity_issue.yaml  warehouse_simple.yaml
application/tests/: BUILD  application_detail_test.cpp  application_test.cpp  config_loader_test.cpp  des_runner_test.cpp  operator_service_test.cpp  runner_test.cpp  runtime_api_test.cpp  scenario_warehouse_test.cpp
control_plane/: BUILD  README.md
control_plane/tests/: control_plan_service_test.cpp  event_storage_management_service_test.cpp  integration_test.cpp  plan_diff_test.cpp  sqlite_workflow_store_test.cpp  workflow_update_feed_test.cpp
operator_ui/: README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
operator_ui/src/: app.tsx  main.tsx  styles.css  vite-env.d.ts
operator_ui/tests/: app-state.test.tsx  app.test.tsx  fixtures.ts  operator-api-payloads.ts  setup.ts
protocol/: BUILD
protocol/proto/: control_plane.proto  control_plane_service.proto  operator_api.proto  operator_api_service.proto  task_orchestration.proto  task_orchestration_service.proto
protocol/src/: grpc_transport.cpp  http_transport.cpp  test_support_tls_material.cpp  tls_credentials.cpp
protocol/tests/: BUILD  grpc_transport_impl_test.cpp  grpc_transport_internal_test.cpp  http_transport_internal_test.cpp  test_support_tls_material.cpp  test_support_tls_material.hpp  test_support_tls_material_internal_test.cpp  tls_credentials_test.cpp
scripts/: fix_header_guards.py  generate_compile_commands.py  llvm_tooling.py  run_clang_format.py  run_clang_tidy_fix.py
task_orchestrator/: BUILD
task_orchestrator/benchmark/: BUILD  README.md  backend_benchmark.cpp  strategy_benchmark.cpp
task_orchestrator/tests/: BUILD
task_orchestrator/utils/: BUILD
utils/: BUILD
(+166 files in other folders)
