# Bzlmod: external dependencies for task_orchestrator
module(
    name = "task_orchestrator",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "yaml-cpp", version = "0.9.0")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

# Boost: fetch via extension so it's visible to this module
boost = use_extension("//third_party:boost.bzl", "boost")
use_repo(boost, "boost")
