# Bzlmod: external dependencies for task_orchestrator
module(
    name = "task_orchestrator",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "yaml-cpp", version = "0.8.0.bcr.1")

# Fix googletest with C++20 + GCC 13
single_version_override(
    module_name = "googletest",
    patch_strip = 1,
    patches = ["//third_party:googletest-cpp20-wchar.patch"],
)

bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

# Boost: fetch via extension so it's visible to this module
boost = use_extension("//third_party:boost.bzl", "boost")
use_repo(boost, "boost")
