# Bzlmod: external dependencies for task_orchestrator
module(
    name = "task_orchestrator",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "or-tools", version = "9.15", repo_name = "or_tools")
bazel_dep(name = "protobuf", version = "32.0")
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.8.0")
bazel_dep(name = "spdlog", version = "1.15.3")
bazel_dep(name = "yaml-cpp", version = "0.8.0.bcr.1")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

# Boost: fetch via extension so it's visible to this module
boost = use_extension("//third_party:boost.bzl", "boost")
use_repo(boost, "boost")

# SQLiteCpp: vendored through a module extension so the Bazel build gets
# a pinned wrapper library plus the bundled SQLite amalgamation.
sqlitecpp = use_extension("//third_party:sqlitecpp.bzl", "sqlitecpp")
use_repo(sqlitecpp, "sqlitecpp")
